force-app/main/default/objects/Order_Item__c/fields/Amount_with_discount__c.field-meta.xml
<CustomField>
    <fullName>Amount_with_discount__c</fullName>
    <formula>Discount__c * Total_Amount__c  - 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount with discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>