force-app/main/default/objects/Order_Item__c/fields/Assignment_Owner__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Owner__c</fullName>
    <label>Assignment Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>