force-app/main/default/objects/Order_Item__c/fields/Mobile_Order__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Order__c</fullName>
    <label>Mobile Order</label>
    <referenceTo>Mobile_Order__c</referenceTo>
    <relationshipLabel>Order Item</relationshipLabel>
    <relationshipName>Order_Item</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>