force-app/main/default/objects/Order_Item__c/fields/Sales_Proce__c.field-meta.xml
<CustomField>
    <fullName>Sales_Proce__c</fullName>
    <label>Sales Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>