force-app/main/default/objects/Order_Item__c/validationRules/Order_Quantity.validationRule-meta.xml
<ValidationRule>
    <fullName>Order_Quantity</fullName>
    <active>true</active>
    <description>Order Quantity Should Be More Than 0</description>
    <errorConditionFormula>Quantity__c    &lt;= 0</errorConditionFormula>
    <errorMessage>Order Quantity Should Be More Than 0</errorMessage>
</ValidationRule>